#3: Implemented client APIs for following and followers listing. (#4)
